# Simple-Tic-Tac-Toe

./: CMakeLists.txt  main.c
